# schema-gen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QUALITY.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: PROJECT_BRIEF.md
src/schema_gen/: __init__.py  cli.py  generator.py
tests/: test_main.py
