[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "schema-gen"
version = "0.1.0"
description = "Generate Pydantic models from JSON samples"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Nripanka Das"}]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
schema-gen = "schema_gen.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
